namespace java com.github.alphafoxz.oneboot.sdk.gen.thrift.enums
namespace rs thrift.gen.enums

enum SdkFileTypeEnum {
    LOCAL_FILE = 0
    LOCAL_DIR = 1
}